# cliproot_rust

./: .gitignore  AGENTS.md  CHANGELOG  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claude_skill_demo_script.md  cliproot_command_surface_plan_1.md  command_surface_implementation_plan.md  justfile
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/commands/: capture.md  consolidate.md  query.md  session.md  wiki-lint.md
.claude-plugin/hooks/: cliproot-capture-hook.sh  cliproot-consolidate-hook.sh  cliproot-flush-hook.sh  cliproot-precompact-hook.sh  cliproot-session-start-hook.sh  hooks.json
.claude-plugin/skills/cliproot-capture/: SKILL.md
.claude-plugin/skills/cliproot-session/: SKILL.md
.github/workflows/: ci.yml  release.yml
.superset/: config.json
crates/cliproot-cli/: Cargo.toml
crates/cliproot-cli/src/: main.rs  output.rs  skills.rs
crates/cliproot-cli/src/commands/: activity.rs  annotate.rs  artifact.rs  background.rs  capture_hook.rs  cite.rs  clip.rs  compile.rs  config.rs  consolidate.rs  consolidate_hook.rs  copy.rs  derive.rs  doctor.rs  export.rs  flush_hook.rs  harness.rs  ingest.rs  init.rs  inspect.rs  list.rs  login.rs  logout.rs  mcp.rs  mod.rs  pack.rs  project.rs  pull.rs  push.rs  query.rs  record.rs  remote.rs  search.rs  session.rs  session_start_hook.rs  trace.rs  verify.rs  wiki_lint.rs
crates/cliproot-cli/src/commands/init/: agent_config.rs  hook_config.rs  mod.rs
crates/cliproot-cli/src/knowledge/: article.rs  article_types.rs  compile.rs  flush.rs  index.rs  lint.rs  llm.rs  mod.rs  query.rs  state.rs
crates/cliproot-cli/src/transcript/: activity_inferrer.rs  clip_matcher.rs  hook_log.rs  mod.rs  parser.rs  session_attribution.rs  session_builder.rs
crates/cliproot-clipboard/: Cargo.toml
crates/cliproot-clipboard/src/: error.rs  html.rs  lib.rs
crates/cliproot-core/: Cargo.toml
crates/cliproot-core/src/: error.rs  hash.rs  lib.rs  matching.rs  model.rs  verify.rs
crates/cliproot-mcp/: Cargo.toml
crates/cliproot-mcp/src/: lib.rs  main.rs  params.rs  repo_handle.rs  service.rs
crates/cliproot-registry/: Cargo.toml
crates/cliproot-registry/src/: auth.rs  client.rs  credential.rs  error.rs  lib.rs  types.rs
crates/cliproot-store/: Cargo.toml
crates/cliproot-store/src/: error.rs  index_db.rs  lib.rs  object_store.rs  pack.rs  repository.rs
crates/cliproot-store/tests/: roundtrip.rs
integrations/cursor/: README.md  hooks.json  mcp.json
integrations/cursor/rules/: cliproot-capture.mdc
skills/cliproot-capture/: SKILL.md
skills/cliproot-capture/agents/: openai.yaml
skills/cliproot-research/: SKILL.md
skills/cliproot-research/agents/: openai.yaml
skills/cliproot-research/references/: tool-reference.md  workflow-examples.md
skills/cliproot-research/scripts/: verify-provenance.sh
skills/cliproot-session/: SKILL.md
skills/cliproot-session/agents/: openai.yaml
skills/cliproot-session/references/: tool-reference.md  workflow-examples.md
skills/cliproot-session/scripts/: verify-provenance.sh
tests/: plugin_hook_composition.sh
