[package]
name = "cliproot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cliproot"
path = "src/main.rs"

[dependencies]
cliproot-core = { workspace = true }
cliproot-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
cliproot-mcp = { workspace = true }
tokio = { workspace = true }
